# ROS2-Nexus-Embodied-Assistant

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  installation.md
src/nexus_brain/: CMakeLists.txt  package.xml  setup.py
src/nexus_brain/config/: params.yaml
src/nexus_brain/launch/: brain.launch.py
src/nexus_brain/nexus_brain/: __init__.py  llm_brain_node.py  llm_client.py
src/nexus_brain/tests/: __init__.py  test_llm_client.py
src/nexus_description/: CMakeLists.txt  package.xml
src/nexus_description/config/: nexus_controllers.yaml
src/nexus_description/launch/: gazebo.launch.py  view_robot.launch.py
src/nexus_description/rviz/: nexus_arm.rviz
src/nexus_description/urdf/: gazebo_control.xacro  nexus_arm.urdf.xacro  nexus_arm.xacro
src/nexus_description/worlds/: nexus_world.sdf
src/nexus_interfaces/: CMakeLists.txt  package.xml
src/nexus_interfaces/msg/: DetectedObject.msg  ExecuteGoal.msg  PerceptionResult.msg  PlanStep.msg  TaskPlan.msg
src/nexus_moveit_config/: CMakeLists.txt  package.xml
src/nexus_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  nexus_arm.srdf  sensors_3d.yaml
src/nexus_moveit_config/launch/: moveit.launch.py
src/nexus_orchestrator/: CMakeLists.txt  package.xml  setup.py
src/nexus_orchestrator/launch/: nexus.launch.py  orchestrator.launch.py
src/nexus_orchestrator/nexus_orchestrator/: __init__.py  orchestrator_node.py
src/nexus_orchestrator/tests/: __init__.py  test_orchestrator.py
src/nexus_perception/: CMakeLists.txt  package.xml  setup.py
src/nexus_perception/config/: params.yaml
src/nexus_perception/launch/: perception.launch.py
src/nexus_perception/nexus_perception/: __init__.py  qwen_vl_client.py  qwen_vl_node.py
src/nexus_perception/tests/: __init__.py  test_qwen_vl.py
src/nexus_voice/: CMakeLists.txt  package.xml  setup.py
src/nexus_voice/config/: params.yaml
src/nexus_voice/launch/: voice.launch.py
src/nexus_voice/nexus_voice/: __init__.py  stt_node.py  tts_node.py
