<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_brain</name>
  <version>0.1.0</version>
  <description>LLM-based decision and control brain for the Nexus embodied assistant.</description>
  <maintainer email="chaud-fs@example.com">Chaud-FS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nexus_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
